--- a/app/views/routes/today_schedule.html.erb
+++ b/app/views/routes/today_schedule.html.erb
@@ -8,7 +8,7 @@
   <h1>{{ route_name }}</h1>
   <ul class="collapsible popout" data-collapsible="accordion">
     <li v-for="client in clients">
-      <div class="collapsible-header"><i class="material-icons"></i><h5>{{ client.first_name }} {{ client.last_name }}</h5> <i class="material-icons">location_on</i>{{ client.address }}</div>
+      <div class="collapsible-header"><i class="material-icons"></i><h3>{{ client.first_name }} {{ client.last_name }}</h3> <i class="material-icons">location_on</i><h5>{{ client.address }}</h5></div>
       <div class="collapsible-body">
         <span><a class="waves-effect waves-light btn" href="#pickup-modal">Pickup</a></span>
         <span><a class="waves-effect waves-light btn" href="#dropoff-modal">Dropoff</a></span>
