--- a/app/views/routes/today_schedule.html.erb
+++ b/app/views/routes/today_schedule.html.erb
@@ -1,34 +1,52 @@
 <div id="locations">
   <login v-if="token == ''"></login>
-  <temperature v-else>Logged In</temperature>
+  <route v-else>Logged In</route>
 </div>
 
-<script type="text/x-template" id="temperature-template">
+<script type="text/x-template" id="route-template">
 <div>
-  <h1>{{ route_name }}</h1>
+  <h1>{{ route.name }} Route</h1>
   <ul class="collapsible popout" data-collapsible="accordion">
     <li v-for="client in clients">
-      <div class="collapsible-header"><i class="material-icons"></i><h3>{{ client.first_name }} {{ client.last_name }}</h3> <i class="material-icons">location_on</i><h5>{{ client.address }}</h5></div>
+      <div class="collapsible-header"><i class="material-icons"></i><h2>{{ client.first_name }} {{ client.last_name }}</h2> <i class="material-icons">location_on</i><h5>{{ client.address }}</h5></div>
       <div class="collapsible-body">
-        <span><a class="waves-effect waves-light btn" href="#pickup-modal">Pickup</a></span>
-        <span><a class="waves-effect waves-light btn" href="#dropoff-modal">Dropoff</a></span>
+        <span><a :id="'pu-'+client.id" class="waves-effect waves-light btn" v-on:click="open_pickup_modal($event)">Pickup</a></span>
+        <span><a :id="'do-'+client.id" class="waves-effect waves-light btn" v-on:click="open_dropoff_modal($event)">Dropoff</a></span>
+          <table class="striped">
+            <thead>
+              <tr>
+                  <th>Type</th>
+                  <th>Status</th>
+                  <th>Time</th>
+                  <th>Wheelchair</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr v-for="operation in client.operations">
+                <td>{{operation.op_type}}</td>
+                <td>{{operation.status}}</td>
+                <td>{{operation.time}}</td>
+                <td>{{operation.wheelchair}}</td>
+              </tr>
+            </tbody>
+          </table>
       </div>  
     </li>
   </ul>
 
   <div id="pickup-modal" class="modal">
     <div class="modal-content">
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'present')">Present</button></span>
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'not-present')">Not Present</button></span>
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'no-show')">No Show</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'present', $event)">Present</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'not-present', $event)">Not Present</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('pickup', 'no-show', $event)">No Show</button></span>
     </div>
   </div>
 
   <div id="dropoff-modal" class="modal">
     <div class="modal-content">
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'present')">Present</button></span>
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'not-present')">Not Present</button></span>
-      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'no-show')">No Show</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'present', $event)">Present</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'not-present', $event)">Not Present</button></span>
+      <span><button class="waves-effect waves-light btn" v-on:click="client_status('dropoff', 'no-show', $event)">No Show</button></span>
     </div>
   </div>
 </div>
@@ -46,34 +64,58 @@
 </form>
 </script>
 
-<%= current_driver.try(:id) %>sdg
 <script>
 var state = {
   token: "<%= JWTWrapper.encode({ driver_id: current_driver.id }) if current_driver %>"
 };
-Vue.component("temperature", {
-  template: "#temperature-template",
+Vue.component("route", {
+  template: "#route-template",
   data: function() {
-    return {route_name: null, clients: null};
+    return {route: {}, clients: null};
   },
   created: function() {
     this.fetchData();
   },
   methods: {
+    open_pickup_modal: function(client_id) {
+      targetId = event.currentTarget.id.split('-')[1]; //expecting id with format xx-id
+      console.log(targetId); 
+
+      $('#pickup-modal div').attr("id", 'pu-modal-'+targetId);
+      $('#pickup-modal').modal('open');
+    },
+    open_dropoff_modal: function(client_id) {
+      targetId = event.currentTarget.id.split('-')[1]; //expecting id with format xx-id
+      console.log(targetId); 
+
+      $('#dropoff-modal div').attr("id", 'do-modal-'+targetId);
+      $('#dropoff-modal').modal('open');
+    },
     fetchData: function() {
       var self = this;
       $.ajax({
         url: "/api/v1/routes",
         beforeSend: function(xhr) { xhr.setRequestHeader("Authorization", "Bearer " + state.token); },
         success: function(response) {
-          console.log(response.clients);
-          self.route_name = response.name;
+          console.log(response);
+          self.route = response;
           self.clients = response.clients;
         }
       });
     },
-    client_status: function (type, status, event) {
-      alert( type + ' Client is ' + status + '!') 
+    client_status: function ( type, status, event) {
+      targetId = event.currentTarget.parentElement.parentElement.id.split('-')[2]
+      //alert( type + ' Client is ' + status + '!')
+      var self = this;
+      $.ajax({
+        url: "/api/v1/create_operation",
+        type: "POST",
+        data: {op_type: type, status: status, driver_id: 1, client_id: targetId, wheelchair: true, helper: "mike" } ,
+        beforeSend: function(xhr) { xhr.setRequestHeader("Authorization", "Bearer " + state.token); },
+        success: function(response) {
+          console.log("operation is a success");
+        }
+      });
       $('#'+ type + '-modal').modal('close');   
     }
   }
@@ -104,12 +146,5 @@ new Vue({
 
 
 
-# Add the following code to a view
-# It will show you an example of how to make a
-# curl HTTP request with the proper authentication headers.
-# Be sure to actually use a working route and not "http://localhost:3000/api/v1/yada_yada"
 
-<% if admin_user_signed_in? %>
-  curl -X GET --header 'Authorization: Bearer <%= JWTWrapper.encode({ driver_id: current_driver.try(:id) }) %>' 'http://localhost:3000/api/v1/yada_yada'
-<% end %>
 
